# our_chat

./: .gitignore  AGENTS.md  CLIENT_INTEGRATION_GUIDE.md  CMakeLists.txt  Dockerfile  README.md  TEST_AUTH_INTEGRATION.md  docker-compose.yml  test_auth.sh
config/: server.yaml
include/common/: config.h  config_manager.h  crypto_util.h  jwt_util.h  logger.h  string_util.h  time_util.h
include/data/: mysql_connection.h  mysql_pool.h  redis_client.h  redis_pool.h
include/services/: auth_service_impl.h  group_service_impl.h  message_service_impl.h  presence_service_impl.h  session_service_impl.h
nginx/: nginx.conf
prometheus/: prometheus.yml
scripts/: init.sql
src/client/: CMakeLists.txt
src/client/flutter/: .flutter-plugins-dependencies  README.md  pubspec.yaml
src/common/: CMakeLists.txt
src/common/config/: config_manager.cpp
src/common/logger/: logger.cpp
src/common/utils/: crypto_util.cpp  string_util.cpp  time_util.cpp
src/data/: CMakeLists.txt
src/data/mysql/: mysql_connection.cpp  mysql_pool.cpp
src/data/redis/: redis_client.cpp  redis_pool.cpp
src/network/: CMakeLists.txt
src/proto/: CMakeLists.txt  common.grpc.pb.h  common.pb.cc  common.pb.h  common.proto  group.grpc.pb.h  group.pb.cc  group.pb.h  group.proto  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  presence.grpc.pb.h  presence.pb.cc  presence.pb.h  presence.proto  session.grpc.pb.h  session.pb.cc  session.pb.h  session.proto  user.grpc.pb.h  user.pb.cc  user.pb.h
src/server/: CMakeLists.txt  main.cpp  server.cpp
src/services/: CMakeLists.txt
(+113 files in other folders)
